--- a/index.html
+++ b/index.html
@@ -59,6 +59,12 @@
             <h2>Others</h2>
         <a href="Hobbies.html">Hobbies</a>
         <a href="Contact Me.html">Contact Me</a>
+    <footer>
+            <div class="footer-content">
+              <p>&copy; Oluwasegun Areoye. All rights reserved.</p>
+            </div>
+</footer>
+
 
 </body>
 </html>
