--- a/index.html
+++ b/index.html
@@ -63,6 +63,11 @@
             <div class="footer-content">
               <p>&copy; Oluwasegun Areoye. All rights reserved.</p>
             </div>
+
+<footer>
+    <div class="footer-content">
+    <p>&copy; Oluwasegun Areoye. All rights reserved.</p>
+    </div>
 </footer>
 
 
