--- a/index.html
+++ b/index.html
@@ -2,14 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   
 
     <title>My Resume</title>
 </head>
 <body>
     <h1>Oluwasegun Areoye</h1>
-    <img src="/Images/segun.jpeg" height="150" alt="segun">
+    <img src="Images/segun.jpeg" height="150" alt="segun">
     <H2>Summary</H2>
     <p>Results-oriented web developer with a love for creating unique and user-friendly websites.<br />
          Proficient in front-end and back-end development, with knowledge <br />
