--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Oluwasegun Areoye</h1>
-    <img src="Images/segun.jpeg" height="150" alt="segun">
+    <img src="./Images/segun.jpeg" height="150" alt="segun">
     <H2>Summary</H2>
     <p>Results-oriented web developer with a love for creating unique and user-friendly websites.<br />
          Proficient in front-end and back-end development, with knowledge <br />
